--- a/GPSSample/app/src/main/res/layout/activity_main.xml
+++ b/GPSSample/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,17 @@
             android:textSize="15dp" />
 
         <Spinner
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/listView"
             android:layout_gravity="center" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="VER MAS"
+            android:id="@+id/button2"
+            android:layout_gravity="center_horizontal|bottom"
+            android:onClick="verPrueba" />
     </FrameLayout>
 </RelativeLayout>
