--- a/GPSSample/app/src/main/res/layout/activity_prueba.xml
+++ b/GPSSample/app/src/main/res/layout/activity_prueba.xml
@@ -6,18 +6,18 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="326dp"
         android:text="New Text"
         android:id="@+id/textView2"
         android:layout_gravity="center_vertical"
-        android:gravity="center_horizontal" />
+        android:gravity="center_horizontal"
+        android:textSize="30dp" />
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="66dp"
         android:text="pruebas"
         android:id="@+id/textView"
-        android:layout_weight="0.18"
         android:layout_gravity="center_horizontal" />
 
     <Button
